--- a/_common_jsTpl.html
+++ b/_common_jsTpl.html
@@ -198,16 +198,18 @@
     <section class="searchbox">
         <!-- header -->
         <header class="header">
-            <div class="ui_text ui_text_group icon">
-                <input class="input" type="text" name="" value="" placeholder="Search">
-                <svg class="ui_icon ui_icon_svg">
-                    <use xlink:href="#icon_search"></use>
-                </svg>
-                <a class="clear">
+            <div class="ui_text">
+                <form action="" class="ui_text_group icon">
+                    <input class="input" type="text" name="" value="" placeholder="Search">
                     <svg class="ui_icon ui_icon_svg">
-                        <use xlink:href="#icon_close"></use>
+                        <use xlink:href="#icon_search"></use>
                     </svg>
-                </a>
+                    <a class="clear">
+                        <svg class="ui_icon ui_icon_svg">
+                            <use xlink:href="#icon_close"></use>
+                        </svg>
+                    </a>
+                </form>
             </div>
             <a class="close dialog_close">
                 CANCEL
