--- a/search.html
+++ b/search.html
@@ -94,20 +94,24 @@
             <div class="container">
                 <!-- search -->
                 <section class="search">
-                    <div class="ui_text ui_text_group icon">
-                        <input class="input" type="text" name="" value="" placeholder="Search">
-                        <svg class="ui_icon ui_icon_svg">
-                            <use xlink:href="#icon_search"></use>
-                        </svg>
-                        <a class="clear">
-                            <svg class="ui_icon ui_icon_svg">
-                                <use xlink:href="#icon_close"></use>
-                            </svg>
+                    <div class="content scrollfix">
+                        <div class="ui_text">
+                            <form action="" class="ui_text_group icon">
+                                <input class="input" type="text" name="" value="" placeholder="Search">
+                                <svg class="ui_icon ui_icon_svg">
+                                    <use xlink:href="#icon_search"></use>
+                                </svg>
+                                <a class="clear">
+                                    <svg class="ui_icon ui_icon_svg">
+                                        <use xlink:href="#icon_close"></use>
+                                    </svg>
+                                </a>
+                            </form>
+                        </div>
+                        <a class="close dialog_close">
+                            CANCEL
                         </a>
                     </div>
-                    <a class="close dialog_close">
-                        CANCEL
-                    </a>
                 </section>
                 <!--/ end search -->
             </div>
