--- a/_pc_footer.html
+++ b/_pc_footer.html
@@ -44,7 +44,7 @@
             <nav class="nav">
                 <ul class="list">
                     <li>
-                        <a href="/pc_privacy.html">
+                        <a href="/pc_terms.html">
                             About Cari Makan
                         </a>
                     </li>
@@ -54,12 +54,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/pc_privacy.html">
+                        <a href="/pc_terms.html">
                             Privacy Policy
                         </a>
                     </li>
                     <li>
-                        <a href="/pc_privacy.html">
+                        <a href="/pc_terms.html">
                             Terms of Service
                         </a>
                     </li>
