--- a/_pc_header.html
+++ b/_pc_header.html
@@ -203,7 +203,7 @@
     </section>
     <!--/ end main -->
 
-    <!-- banner -->
+    <!-- banner  -->  <!-- 只在index出現 -->
     <section class="banner">
         <ul class="list">
             <!-- loop list -->
