--- a/privacy.html
+++ b/privacy.html
@@ -132,119 +132,119 @@
                 <div class="content">
                     <!-- content -->
                     <div class="block">
-                        <h3 class="title">
-                            適用範圍
-                        </h3>
                         <div class="content">
                             <p>
-                                以下的隱私權保護政策，適用於您在本網站活動時，所涉及的個人資料蒐集方法、處理程序與利用範圍。
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.
                             </p>
                             <p>
-                                本網站對於個人資料之蒐集、處理及利用，以誠實及信用方法在目的範圍內運用，不會損害到您的權益。本網站保存您的個人資料，在您主張取消時，本網站即進行您個人資料的移除作業。
+                                Ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus Services semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.
                             </p>
                             <p>
-                                不適用於本網站以外的相關連結網站及非本網站所委託或參與管理的人員。
+                                Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
+                            </p>
+                            <p>
+                                Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh.
                             </p>
                         </div>
                     </div>
                     <div class="block">
                         <h3 class="title">
-                            個人資料之蒐集及使用方式
+                            I. The information we collect and how we use it
                         </h3>
                         <div class="content">
                             <p>
-                                您在註冊帳號、瀏覽網頁、參與社群言論發表文章時，我們將會收集你的個人識別資料。我們也可以從其他合作夥伴處取得個人資料。
+                                Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero.
+                            </p>
+                            <ul class="list">
+                                <li>
+                                     Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit.
+                                </li>
+                                <li>
+                                     Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci.
+                                </li>
+                                <li>
+                                     Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc.
+                                </li>
+                                <li>
+                                     Vestibulum fringilla pede sit amet augue. In turpis.
+                                </li>
+                            </ul>
+                            <p>
+                                 Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
                             </p>
                             <p>
-                                當你在註冊時，我們會根據您所註冊之會員不同，要求最低需求量之個人資料。於一般瀏覽時，伺服器會自行記錄相關行徑，包括您使用連線設備的IP位址、使用時間、使用的瀏覽器、瀏覽及點選資料記錄等。同時也會蒐集其他會員對你的意見，做為我們增進網站服務的參考依據，此記錄為內部應用，絕不對外公布。
+                                 Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna, posuere eget, vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium. Pellentesque auctor neque nec urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi. Aenean viverra rhoncus pede. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut non enim eleifend felis pretium feugiat. Vivamus quis mi. Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit ornare lobortis. Curabitur a felis in nunc fringilla tristique.
+
+
                             </p>
                         </div>
                     </div>
                     <div class="block">
                         <h3 class="title">
-                            與第三者共用個人資料之政策
+                            II. How we use the information we collect
                         </h3>
                         <div class="content">
                             <p>
-                                LOOKER絕不會任意出售、交換、或出租任何您的個人資料給其他團體或個人。只有在下列情況除外，這些狀況包括（但不限於）：
+                                Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero.
+                            </p>
+                            <p>
+                                Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna, posuere eget, vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium. Pellentesque auctor neque nec urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="block">
+                        <h3 class="title">
+                            III. How we share the information we collect
+                        </h3>
+                        <div class="content">
+                            <p>
+                                 Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
                             </p>
                             <ol class="list">
                                 <li>
-                                    3.1 在您同意分享資訊的情況下
+                                    Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
                                 </li>
                                 <li>
-                                    3.2 當您行為已違反網站政策或可能損害或妨礙LOOKER導致任何人遭受損害，經LOOKER研析揭露您的個人資料是為了辨識、聯絡或採取法律行動所必要者。
+                                    Donec elit libero, sodales nec, volutpat a, suscipit non, turpis.
                                 </li>
                                 <li>
-                                    3.3 基於善意相信揭露您的個人資料為法律所需要。
-                                </li>
-                                <li>
-                                    3.4 司法單位因公眾安全，要求公開特定個人資料時，將視司法單位適法性及是否遵照法定之程序，以及考量對所有使用者安全，採行可能 必要的配合措施。
+                                    Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
                                 </li>
                             </ol>
-                        </div>
-                    </div>
-                    <div class="block">
-                        <h3 class="title">
-                            Cookie運用政策
-                        </h3>
-                        <div class="content">
                             <p>
-                                Cookie是伺服端為了區別使用者的不同喜好，經由瀏覽器寫入使用者硬碟的一些簡短資訊。
+                                 Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
                             </p>
                             <p>
-                                只要修改瀏覽器設定，你可以選擇接受所有cookie、設定cookie時得到通知、拒絕所有cookie等三種。由於每個伺服器的設定方式不一，請你細續伺服器的「說明」部分，了解如何修改cookie的設定。
-                            </p>
-                            <p>
-                                如果您選擇拒絕所有的cookie，您可能無法使用部份個人化服務，或是參與部份的活動。依據以下目的及情況，LOOKER會在本政策原則之下，在您瀏覽器中寫入並讀取cookie：
-                            </p>
-                            <ol class="list">
-                                <li>
-                                    4.1 為提供更好的個人化服務，以及方便您參與個人化的互動活動。cookie在您註冊或登入時建立，並在您登出時修改。
-                                </li>
-                                <li>
-                                    4.2 為統計瀏覽人數及分析瀏覽模式，以了解網頁瀏覽的情況，做為本網站改善服務的參考。
-                                </li>
-                            </ol>
-                        </div>
-                    </div>
-                    <div class="block">
-                        <h3 class="title">
-                            個人帳號之保密
-                        </h3>
-                        <div class="content">
-                            <p>
-                                請妥善維護您的會員帳號、密碼或任何個人資料。請您留意無論何時您透過網站討論區、電子郵件、或聊天室等公開區域所主動揭露的個人資料，均可能被其他第三人蒐集或使用，上網時請特別小心。
+                                 Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna, posuere eget, vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium. Pellentesque auctor neque nec urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi. Aenean viverra rhoncus pede. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut non enim eleifend felis pretium feugiat. Vivamus quis mi. Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit ornare lobortis. Curabitur a felis in nunc fringilla tristique.
                             </p>
                         </div>
                     </div>
                     <div class="block">
                         <h3 class="title">
-                            資料之保護
+                            IV. Analytics and tailored advertising
                         </h3>
                         <div class="content">
                             <p>
-                                本網站主機均設有防火牆、防毒系統、重要個資加密等相關的各項資訊安全設備及必要的安全防護措施，加以保護網站及您的個人資料。
+                                 Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis.
                             </p>
                         </div>
                     </div>
                     <div class="block">
                         <h3 class="title">
-                            隱私保護政策的修改
+                            V. Choices about how we use and disclose your information
                         </h3>
                         <div class="content">
                             <p>
-                                由於科技發展的迅速，相關法規訂定未臻完備前，以及未來可能難以預見的環境變遷等因素，將會視需要修改網站上所提供的隱私權保護政策，並於網頁上公告，以落實保障您個人資料保護的立意。如果您不同意本政策，請立即停止使用本網站服務。
+                                Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero.
                             </p>
-                        </div>
-                    </div>
-                    <div class="block">
-                        <h3 class="title">
-                            看法與建議
-                        </h3>
-                        <div class="content">
                             <p>
-                                如果您有任何問題或建議，請透過客服信箱與我們聯繫。
+                                 Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
+                            </p>
+                            <p>
+                                Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna, posuere eget, vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium.
+                            </p>
+                            <p>
+                                Pellentesque auctor neque nec urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi. Aenean viverra rhoncus pede. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut non enim eleifend felis pretium feugiat. Vivamus quis mi. Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit ornare lobortis. Curabitur a felis in nunc fringilla tristique.
                             </p>
                         </div>
                     </div>
