--- a/post.html
+++ b/post.html
@@ -174,6 +174,14 @@
                         Pusing dengan kerjaan yang menumpuk dan mesti lembur di kantor? Daripada ngedumel dalam hati, memang lebih enak dibawa ngemil biar bikin mood jadi lebih happy. Nih, 6 camilan berikut ini bisa jadi opsi yang tepat buat kamu. Cek aja!
                     </p>
 
+                    <p class="post_img">
+                        <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg">
+                    </p>
+
+                    <p class="post_video">
+                        <iframe src="https://www.youtube.com/embed/uq6fGhX2nDM" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+                    </p>
+
                     <!-- ui_shopblock -->
                     <div class="ui_shopblock">
                         <div class="content">
