--- a/_postlist.html
+++ b/_postlist.html
@@ -101,4 +101,79 @@
             <!--/ end content -->
         </a>
     </li>
+    <li>
+        <a href="/post.html">
+            <!-- img -->
+            <div class="img">
+                <!-- img size: 140*90 -->
+                <img src="/images/placeholder_cover.jpg" />
+            </div>
+            <!--/ end img -->
+
+            <!-- content -->
+            <div class="content">
+                <!-- time -->
+                <div class="time">
+                    Nov 07, 2017
+                </div>
+                <!--/ end time -->
+                <!-- title -->
+                <h3 class="title">
+                    Sushi Tei - Lippo Kemang Village Mall
+                </h3>
+                <!--/ end title -->
+            </div>
+            <!--/ end content -->
+        </a>
+    </li>
+    <li>
+        <a href="/post.html">
+            <!-- img -->
+            <div class="img">
+                <!-- img size: 140*90 -->
+                <img src="/images/placeholder_cover.jpg" />
+            </div>
+            <!--/ end img -->
+
+            <!-- content -->
+            <div class="content">
+                <!-- time -->
+                <div class="time">
+                    Nov 07, 2017
+                </div>
+                <!--/ end time -->
+                <!-- title -->
+                <h3 class="title">
+                    Sushi Tei - Lippo Kemang Village Mall
+                </h3>
+                <!--/ end title -->
+            </div>
+            <!--/ end content -->
+        </a>
+    </li>
+    <li>
+        <a href="/post.html">
+            <!-- img -->
+            <div class="img">
+                <!-- img size: 140*90 -->
+                <img src="/images/placeholder_cover.jpg" />
+            </div>
+            <!--/ end img -->
+
+            <!-- content -->
+            <div class="content">
+                <!-- time -->
+                <div class="time">
+                    Nov 07, 2017
+                </div>
+                <!--/ end time -->
+                <!-- title -->
+                <h3 class="title">
+                    Sushi Tei - Lippo Kemang Village Mall
+                </h3>
+                <!--/ end title -->
+            </div>
+            <!--/ end content -->
+        </a>
+    </li>
 </ul>
