--- a/pc_index.html
+++ b/pc_index.html
@@ -214,9 +214,9 @@
     <script type="text/javascript" src="/js/pc/com.js"></script>
     <!--/ end layout js -->
 
-    <!-- com js -->
-    <!-- <script type="text/javascript" src="/js/pc/com.js"></script> -->
-    <!--/ end com js -->
+    <!-- index js -->
+    <script type="text/javascript" src="/js/pc/index.js"></script>
+    <!--/ end index js -->
     <!--/ end script js -->
 
 
