--- a/_pc_header.html
+++ b/_pc_header.html
@@ -209,25 +209,31 @@
             <!-- loop list -->
             <li>
                 <a href="#" class="img">
-                    <img src="/images/test/pc_banner.jpg">
+                    <img src="/images/test/pc_banner.jpg" />
                 </a>
             </li>
             <!--/ end loop list -->
             <li>
                 <a href="#" class="img">
-                    <img src="/images/test/pc_banner.jpg">
+                    <img src="/images/test/pc_banner.jpg" />
                 </a>
             </li>
             <li>
                 <a href="#" class="img">
-                    <img src="/images/test/pc_banner.jpg">
+                    <img src="/images/test/pc_banner.jpg" />
                 </a>
             </li>
             <li>
                 <a href="#" class="img">
-                    <img src="/images/test/pc_banner.jpg">
+                    <img src="/images/test/pc_banner.jpg" />
                 </a>
             </li>
+        </ul>
+        <ul class="nav">
+            <li class="flag"></li>
+            <li class="flag"></li>
+            <li class="flag"></li>
+            <li class="flag"></li>
         </ul>
     </section>
     <!--/ end banner -->
