--- a/_pc_header.html
+++ b/_pc_header.html
@@ -207,33 +207,33 @@
     <section class="banner">
         <ul class="list">
             <!-- loop list -->
-            <li>
+            <li data-index="0">
                 <a href="#" class="img">
                     <img src="/images/test/pc_banner.jpg" />
                 </a>
             </li>
             <!--/ end loop list -->
-            <li>
+            <li data-index="1">
                 <a href="#" class="img">
                     <img src="/images/test/pc_banner.jpg" />
                 </a>
             </li>
-            <li>
+            <li data-index="2">
                 <a href="#" class="img">
                     <img src="/images/test/pc_banner.jpg" />
                 </a>
             </li>
-            <li>
+            <li data-index="3">
                 <a href="#" class="img">
                     <img src="/images/test/pc_banner.jpg" />
                 </a>
             </li>
         </ul>
         <ul class="nav">
-            <li class="flag"></li>
-            <li class="flag"></li>
-            <li class="flag"></li>
-            <li class="flag"></li>
+            <li class="flag" data-index="0"></li>
+            <li class="flag" data-index="1"></li>
+            <li class="flag" data-index="2"></li>
+            <li class="flag" data-index="3"></li>
         </ul>
     </section>
     <!--/ end banner -->
