--- a/_pc_footer.html
+++ b/_pc_footer.html
@@ -82,8 +82,8 @@
             <!--/ end title -->
             <!-- content -->
             <div class="content">
-                <a href="#" class="btn">Google Play</a>
-                <a href="#" class="btn">App Store</a>
+                <a href="#" class="btn googleplay">Google Play</a>
+                <a href="#" class="btn applestore">App Store</a>
             </div>
             <!--/ end content -->
         </div>
