--- a/privacy.html
+++ b/privacy.html
@@ -110,7 +110,7 @@
 
                     <!-- title -->
                     <h2 class="title">
-                        Privacy Policy
+                        Ketentuan Layanan
                     </h2>
                     <!--/ end title -->
                 </section>
@@ -132,6 +132,9 @@
                 <div class="content">
                     <!-- content -->
                     <div class="block">
+                        <h2 class="title">
+                            I. The information we collect and how we use it
+                        </h2>
                         <div class="content">
                             <p>
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.
@@ -148,10 +151,10 @@
                         </div>
                     </div>
                     <div class="block">
-                        <h3 class="title">
-                            I. The information we collect and how we use it
-                        </h3>
                         <div class="content">
+                            <h3 class="title">
+                                I. The information we collect and how we use it
+                            </h3>
                             <p>
                                 Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero.
                             </p>
@@ -180,10 +183,10 @@
                         </div>
                     </div>
                     <div class="block">
-                        <h3 class="title">
-                            II. How we use the information we collect
-                        </h3>
                         <div class="content">
+                            <h3 class="title">
+                                II. How we use the information we collect
+                            </h3>
                             <p>
                                 Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero.
                             </p>
@@ -193,10 +196,10 @@
                         </div>
                     </div>
                     <div class="block">
-                        <h3 class="title">
-                            III. How we share the information we collect
-                        </h3>
                         <div class="content">
+                            <h3 class="title">
+                                III. How we share the information we collect
+                            </h3>
                             <p>
                                  Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
                             </p>
@@ -220,20 +223,23 @@
                         </div>
                     </div>
                     <div class="block">
-                        <h3 class="title">
-                            IV. Analytics and tailored advertising
-                        </h3>
                         <div class="content">
+                            <h3 class="title">
+                                IV. Analytics and tailored advertising
+                            </h3>
                             <p>
                                  Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis.
                             </p>
                         </div>
                     </div>
                     <div class="block">
-                        <h3 class="title">
+                        <h2 class="title">
                             V. Choices about how we use and disclose your information
-                        </h3>
+                        </h2>
                         <div class="content">
+                            <h3 class="title">
+                                V. Choices about how we use and disclose your information
+                            </h3>
                             <p>
                                 Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero.
                             </p>
